Html lang changed to UA

--- a/Famo.html
+++ b/Famo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
 <head>
   <title>Парки світу</title>
 <link rel="icon" type="image/png" href="images/someimage.png" />
