Folder name reference issue fixed

--- a/Famo.html
+++ b/Famo.html
@@ -63,7 +63,7 @@ img {
 --> 
 </style>
 </head> 
-	<body style="background-image: url(Images/genfon.bmp)"> 
+	<body style="background-image: url(images/genfon.bmp)"> 
 <Center><img src = "images/gen15.png"  width = 180 ></Center>
 <br>
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <a href="Big.html"><img src = "images/gen16.png"  width = 150 ></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <a href="index.html"><img src = "images/gen14.png"  width = 135 ></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="Beau.html"><img src = "images/gen17.png"  width = 150 ></a>
