--- a/Big.html
+++ b/Big.html
@@ -42,7 +42,7 @@
 	--> 
 	</style>
 	</head> 
-		<body style="background-image: url(Images/genfon4.png)"> 
+		<body style="background-image: url(images/genfon4.png)"> 
 	<Center><img src = "images/gen5.png"  width = 225 ></Center>
 	
 	&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="Beau.html"><img src = "images/gen7.png"  width = 200 ></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index.html"><img src = "images/gen6.png"  width = 200 ></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="Famo.html"><img src = "images/gen8.png"  width = 200 ></a>
