Another typo in folder name references fixed

--- a/Beau.html
+++ b/Beau.html
@@ -43,7 +43,7 @@ img {
 --> 
 </style>
 </head> 
-	<body style="background-image: url(Images/genfon.jpg)"> 
+	<body style="background-image: url(images/genfon.jpg)"> 
 <Center><img src = "images/gen10.png"  width = 225 ></Center>
 <br>
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="Big.html"><img src = "images/gen12.png"  width = 200 ></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index.html"><img src = "images/gen9.png"  width = 170 ></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="Famo.html"><img src = "images/gen11.png"  width = 200 ></a>
