--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
    --> 
    </style>
    </head> 
-<body style="background-image: url(Images/genfon.jpg)"> 
+<body style="background-image: url(images/genfon.jpg)"> 
 <Center><img src = "images/gen4.png"  width = 280 ></Center>
 
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="Big.html"><img src = "images/gen19.png"  width = 200 ></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="Beau.html"><img src = "images/gen18.png"  width = 200 ></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="Famo.html"><img src = "images/gen20.png"  width = 200 ></a>
