--- a/Beau.html
+++ b/Beau.html
@@ -47,7 +47,7 @@ img {
 <Center><img src = "images/gen10.png"  width = 225 ></Center>
 <br>
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="Big.html"><img src = "images/gen12.png"  width = 200 ></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index.html"><img src = "images/gen9.png"  width = 170 ></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="Famo.html"><img src = "images/gen11.png"  width = 200 ></a>
-<br>
+<br><br>
 <table width = "800px"   align = "center" border = "10" bordercolor = "DarkGreen" bgcolor = "DarkGreen"
  cellpadding ="0" cellspacing="0"  style=" box-shadow: 0 0 5px 2px DarkGreen">
 <tr><td align="center" bgcolor = "ForestGreen"> 
@@ -146,10 +146,13 @@ img {
 Парк розташований у верхів’ях річки Йеллоустон (від якої він і отримав свою назву) на території трьох штатів – Айдахо, 
 Вайомінг (велика частина парку) і Монтана. Площа парку – майже дев’ять тисяч кв. км. (це більше, ніж площа штатів Делавер і Род-Айленд).
 Єллоустонський національний парк – одна з найпопулярніших визначних пам’яток США, щороку його відвідують більше двох мільйонів туристів. </p>
+<br>
 <a href= "Famo.html"><img src = "images/img63.jpg"  width = "780"></a>
-<br><br><br>
 </table>
 <center><a href="#" title="Вернуться к началу" class="topbutton"><img src = "images/Up arrow.png" width = "125"></a></center>
 </font>
+<br>
+</table>
+<br><br><br>
 </body>
 </html>
