--- a/Big.html
+++ b/Big.html
@@ -46,7 +46,7 @@
 	<Center><img src = "images/gen5.png"  width = 225 ></Center>
 	
 	&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="Beau.html"><img src = "images/gen7.png"  width = 200 ></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index.html"><img src = "images/gen6.png"  width = 200 ></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="Famo.html"><img src = "images/gen8.png"  width = 200 ></a>
-	<br>
+	<br><br>
 	<table width = "800px"   align = "center" border = "10" bordercolor = "MediumBlue" bgcolor = "MediumBlue"
 	 cellpadding ="0" cellspacing="0"  style=" box-shadow: 0 0 5px 2px MediumBlue" />
 	<tr><td align="center" bgcolor = "DodgerBlue"> 
@@ -106,8 +106,10 @@
 	</td></tr><tr><td align="center" bgcolor = "DodgerBlue">
 	<p>Парк не належить до жодної з комун, він перебуває під управлінням ґренландського департаменту природи та довкілля.
 	Окрім того, це єдиний національний парк у Гренландії.</p>
-	<br><br><br>
+	<br>
 	</table>
 	<center><a href="#" title="Вернуться к началу" class="topbutton"><img src = "images/gen up2.png" width = "100"></a></center>
+	</table>
+	<br><br><br>
 	</body>
 </html>
