--- a/Famo.html
+++ b/Famo.html
@@ -67,7 +67,7 @@ img {
 <Center><img src = "images/gen15.png"  width = 180 ></Center>
 <br>
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <a href="Big.html"><img src = "images/gen16.png"  width = 150 ></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <a href="index.html"><img src = "images/gen14.png"  width = 135 ></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="Beau.html"><img src = "images/gen17.png"  width = 150 ></a>
-<br>
+<br><br>
 <table width = "800px"   align = "center" border = "10" bordercolor = "ForestGreen" bgcolor = "ForestGreen"
  cellpadding ="0" cellspacing="0"  style=" box-shadow: 0 0 5px 2px ForestGreen" />
 <tr><td align="center" bgcolor = "LightSkyBlue"> 
@@ -174,10 +174,12 @@ img {
  З усіх кінців країни, з усіх штатів вони їдуть сюди, щоб відпочити від урбаністичних пейзажів та технократичної цивілізації в цілому,
  провести кілька днів серед лісів і гір та згадати, що ще двісті років тому вся Америка була таким ось недоторканим «заповідником». <center><img src = "images/y31.jpg"  width = "440"></center>
  </p>
+ <br>
  </table>
- <br><br><br>
  </table>
  <center><a href="#" title="Вернуться к началу" class="topbutton"><img src = "images/0001.png" width = "75"></a></center>
 </font>
+</table>
+<br><br><br>
 </body> 
 </html>
