--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 <Center><img src = "images/gen4.png"  width = 280 ></Center>
 
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="Big.html"><img src = "images/gen19.png"  width = 200 ></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="Beau.html"><img src = "images/gen18.png"  width = 200 ></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="Famo.html"><img src = "images/gen20.png"  width = 200 ></a>
+<br><br>
 <table width = "800px"   align = "center" border = "10" bordercolor = "DarkGreen" bgcolor = "LimeGreen"
  cellpadding ="0" cellspacing="0"  style=" box-shadow: 0 0 5px 2px green" />
 <tr><td align="center" bgcolor = "LightGreen"> 
@@ -105,9 +106,11 @@
 <tr><td bgcolor = LightGreen rowspan="2"><center><img src = "images/img7.jpg"  width = 250 Hspace = 5></center><center><i><font size=+2 color="DarkGreen"><u>золотий дощ звичайний</u></center></font></td><td align=center bgcolor = LightGreen><img src = "images/img6.jpg"  width = 170><center><font size=+2 color="DarkGreen"><u><i>Тульпанове дерево</u></center></font></td><td align=center bgcolor = LightGreen><img src = "images/img8.jpg"  width = 190><center><font size=+2 color="DarkGreen"><u><i>Магнолія</u></center></font></td></tr>
 <tr><td align=center bgcolor = LightGreen><img src = "images/img9.jpg"  width = 180><center><font size=+2 color="DarkGreen"><u><i>деревоподібна гортензія</u></center></font></td><td align=center bgcolor = LightGreen><img src = "images/img10.jpg"  width = 173><center><font size=+2 color="DarkGreen"><u><i>японська айва</u></center></font></i></td>
 </table>
+<br>
 </td>
-<br><br><br>
 </table>
 <center><a href="#" title="Вернуться к началу" class="topbutton"><img src = "images/gen up.png" width = "100"></a></center>
+</table>
+<br><br><br>
 </body>
 </html>
